fix: improve element spacing

--- a/src/app/participants/participant-list/participant-list.component.scss
+++ b/src/app/participants/participant-list/participant-list.component.scss
@@ -1,6 +1,7 @@
+@import '../../scss/common';
+
 .container {
-  margin-top: 6rem;
-  padding-top: 4rem;
+  padding-top: $sub-navbar-size;
 }
 
 header {
