--- a/src/app/programs/program/program.component.scss
+++ b/src/app/programs/program/program.component.scss
@@ -1,4 +1,6 @@
 header {
+  margin-top: 0.5rem;
+
   h1 {
     color: black;
     font-size: 1rem;
