--- a/src/app/scss/_variables.scss
+++ b/src/app/scss/_variables.scss
@@ -1,2 +1,3 @@
 $navbar-size: 54px;
 $navbar-sm-up-size: 88px;
+$sub-navbar-size: 50px;
